# finalfusion-tensorflow-ops

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTORS  setup.py  tf_flags.py
ci/: script.sh
finalfusion-tf/: CMakeLists.txt
finalfusion-tf/kernel/: FFLookupKernels.cc  ff_lookup_kernels.cc
finalfusion-tf/lookup/: FFLookup.cc  ff_lookup.cc
finalfusion-tf/ops/: FFLookupOps.cc  ff_lookup_ops.cc
include/finalfusion-tf/: FFLookup.hh  ff_lookup.hh
python/finalfusion_tensorflow/: __init__.py
python/finalfusion_tensorflow/ops/: finalfusion_ops.py
tests/: CMakeLists.txt  conftest.py  test_eager_mode.py  test_graph_mode.py  test_init_close.py
